--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebb-theme-harmony",
+  "name": "talksimlishtheme",
   "version": "2.0.19",
   "nbbpm": {
     "compatibility": "^3.7.0"
@@ -8,7 +8,7 @@
   "main": "library.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NodeBB/nodebb-theme-harmony"
+    "url": "https://github.com/simsgalore/talksimlishtheme"
   },
   "scripts": {
     "lint": "eslint ."
@@ -34,7 +34,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/NodeBB/nodebb-theme-harmony/issues"
+    "url": "https://github.com/simsgalore/talksimlishthemeissues"
   },
   "dependencies": {
     "@fontsource/inter": "5.0.15",
