--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "talksimlishtheme",
+  "name": "nodebb-theme-talksimlish",
   "version": "2.0.19",
   "nbbpm": {
     "compatibility": "^3.7.0"
