--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "url": "https://github.com/simsgalore/nodebb-theme-talksimlish/issues"
   },
   "dependencies": {
-    "@fontsource/inter": "5.0.15",
-    "@fontsource/poppins": "5.0.8"
+    "@fontsource-variable/cabin": "5.1.1",
   },
   "devDependencies": {
     "eslint": "^9.0.0",
